
2018-07-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: adjusted length_of handling to distinguish constant-entry
	  from register

2018-07-18  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: added checks for (RE)WRITE FILE f FROM literal (bug #411).
	* parser.y (file_control_entry): fixed regression caused when fixing bug #405.

2018-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c, parser.y: added IBM's ALLOCATE format by including the
	  ignored LOC phrase

2018-07-05  Ron Norman <rjn@inglenet.com>

	* parser.y, scanner.l: removed LENGTH_OF as it is no longer used

2018-07-04  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_build_picture): fixed calculation of number of decimal
	  digits in PICs with floating +/- after decimal point, e.g. --.--. See
	  bug #220.

2018-07-04  Ron Norman <rjn@inglenet.com>

	* parser.y: accept both LENGTH and LENGTH OF in all places

2018-06-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): fixed bug #98 "SIGSEGV
	  on CANCEL of RECURSIVE programs" by adjusting generation of
	  CANCEL callback

2018-06-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* field.c (validate_usage): fixed SIGSEGV when PICTURE is missing

2018-06-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_call): use X"nn" as name for error messages
	  concerning system library CALLs

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* parser.y, reserved.c, tree.c, tree.h: added intrinsic functions
	  CONTENT-LENGTH and CONTENTS-OF

2018-06-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added POS (only reserved for acu and default)
	  as alternative for AT POSITION, allow both in SCREEN definitions
	* parser.y: improved ACUCOBOL-GT parsing of USAGE HANDLE: allow
	  HANDLE [OF] control-type (support pending), better error messages
	  for unknown HANDLE types
